--- a/index.html
+++ b/index.html
@@ -54,5 +54,72 @@
         <img src="img/hero.png" class="header__img" alt="Citex Bank" />
       </div>
     </header>
+
+    <section class="section" id="section--1">
+      <div class="section__title">
+        <h2 class="section__description">Features</h2>
+        <h3 class="section__header">
+          Everything you need to know about Citex Bank
+        </h3>
+      </div>
+
+      <div class="features">
+        <img src="img/computer.png" alt="Computer" class="features__img" />
+
+        <div class="features__feature">
+          <div class="features__icon">
+            <img src="img/laptop.png" alt="laptop" />
+          </div>
+          <h5 class="features__header">Accessible from anywhere</h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
+            voluptates. Fugiat quisquam esse odit non nisi earum nostrum et rem.
+          </p>
+        </div>
+
+        <div class="features__feature">
+          <div class="features__icon">
+            <img src="img/rising.png" alt="rising" />
+          </div>
+          <h5 class="features__header">Watch your money grow</h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
+            voluptates. Fugiat quisquam esse odit non nisi earum nostrum et rem.
+          </p>
+        </div>
+        <img src="img/paper.png" alt="documents" class="features__img" />
+
+        <img src="img/credit-card.png" alt="credit-card" class="credit__card" />
+        <div class="features__feature">
+          <div class="features__icon">
+            <img src="img/credit-card-icon.png" alt="rising" />
+          </div>
+          <h5 class="features__header">Free debit card included</h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis,
+            voluptates. Fugiat quisquam esse odit non nisi earum nostrum et rem.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="section--2">
+      <div class="section__title">
+        <h2 class="section__description">Operations</h2>
+        <h3 class="section__header">
+          Everything simple and accessible for everyone
+        </h3>
+      </div>
+    </section>
+
+    <section class="section" id="section--3">
+      <div class="section__title">
+        <h2 class="section__description">Still not convinced?</h2>
+        <h3 class="section__header">
+          Join another million of already existing users that are making their
+          life easier
+        </h3>
+      </div>
+    </section>
   </body>
 </html>
