--- a/index.html
+++ b/index.html
@@ -110,14 +110,77 @@
           Everything simple and accessible for everyone
         </h3>
       </div>
+
+      <div class="operations">
+        <div class="operations__tab-container">
+          <button
+            class="btn operations__tab operations__tab--1 operations__tab--active"
+            data-tab="1"
+          >
+            <span>01</span>Instant Transfer
+          </button>
+
+          <button class="btn operations__tab operations__tab--2" data-tab="2">
+            <span>02</span>Instant Loans
+          </button>
+
+          <button class="btn operations__tab operations__tab--3" data-tab="3">
+            <span>03</span>Instant Closing
+          </button>
+        </div>
+
+        <div
+          class="operations__content operations__content--1 operations__content--active"
+        >
+          <div class="options__container">
+            <div class="operations__icon operations__icon--1"></div>
+            <h5 class="operations__header">
+              Transfer money to anyone! No fees, no waiting time, no BS.
+            </h5>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+            quidem blanditiis officia ex iusto! Ad quo facilis, sunt qui error
+            assumenda, consectetur quisquam nobis, numquam similique magni illo
+            itaque rem.
+          </p>
+        </div>
+
+        <div class="operations__content operations__content--2">
+          <div class="operations__icon operations__icon--2"></div>
+          <h5 class="operations__header">
+            Buy a home with instant loans at Citex Bank!
+          </h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
+            dolores tempore soluta, omnis ea cum ipsa optio sequi. Repellendus
+            porro nulla at, voluptas illum magni nesciunt praesentium cumque
+            dolorem. Perferendis?
+          </p>
+        </div>
+
+        <div class="operations__content operations__content--3">
+          <div class="operations__icon operations__icon--3"></div>
+          <h5 class="operations__header">
+            You no longer need an account? No problem! Close it instantly at no
+            extra fees.
+          </h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse
+            asperiores aspernatur a explicabo earum deleniti velit harum animi
+            voluptate, perferendis nostrum vitae neque, alias laudantium quas
+            eaque? Dolore, qui officia.
+          </p>
+        </div>
+      </div>
     </section>
 
     <section class="section" id="section--3">
       <div class="section__title">
         <h2 class="section__description">Still not convinced?</h2>
         <h3 class="section__header">
-          Join another million of already existing users that are making their
-          life easier
+          Join another million existing users that are already making their life
+          easier.
         </h3>
       </div>
     </section>
