added slider function and sticky navbar

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
     </header>
 
-    <section class="section" id="section--1">
+    <section class="section section--hidden" id="section--1">
       <div class="section__title">
         <h2 class="section__description">Features</h2>
         <h3 class="section__header">
@@ -64,7 +64,12 @@
       </div>
 
       <div class="features">
-        <img src="img/computer.png" alt="Computer" class="features__img" />
+        <img
+          src="img/img-lazy/computer-lazy.png"
+          data-src="img/img-lazy/computer.png"
+          alt="Computer"
+          class="features__img lazy-img"
+        />
 
         <div class="features__feature">
           <div class="features__icon">
@@ -87,9 +92,19 @@
             voluptates. Fugiat quisquam esse odit non nisi earum nostrum et rem.
           </p>
         </div>
-        <img src="img/paper.png" alt="documents" class="features__img" />
+        <img
+          src="img/img-lazy/paper-lazy.png"
+          data-src="img/img-lazy/paper.png"
+          alt="documents"
+          class="features__img lazy-img"
+        />
 
-        <img src="img/credit-card.png" alt="credit-card" class="credit__card" />
+        <img
+          src="img/img-lazy/credit-card-lazy.png"
+          data-src="img/img-lazy/credit-card.png"
+          alt="credit-card"
+          class="features__img credit__card lazy-img"
+        />
         <div class="features__feature">
           <div class="features__icon">
             <img src="img/icons/credit-card-icon.png" alt="rising" />
@@ -103,7 +118,7 @@
       </div>
     </section>
 
-    <section class="section" id="section--2">
+    <section class="section section--hidden" id="section--2">
       <div class="section__title">
         <h2 class="section__description">Operations</h2>
         <h3 class="section__header">
@@ -172,7 +187,7 @@
             </div>
             <h5 class="operations__header">
               You no longer need an account? Close it instantly at no extra
-              fees.
+              cost.
             </h5>
           </div>
           <p>
@@ -185,7 +200,7 @@
       </div>
     </section>
 
-    <section class="section" id="section--3">
+    <section class="section section--hidden" id="section--3">
       <div class="section__title">
         <h2 class="section__description">Still not convinced?</h2>
         <h3 class="section__header">
